[package]
name        = "pruefung"
version     = "0.2.1"
authors     = ["Martin Larralde <martin.larralde@ens-cachan.fr>"]
license     = "MIT"
description = "Checksums in pure Rust, with no_std available, implementing the Hasher trait."
repository  = "https://github.com/althonos/pruefung"
readme      = "README.md"
keywords    = ["checksum", "crc", "hash"]
categories  = ["no-std"]

[lib]
name       = "pruefung"
path       = "src/lib.rs"
doctest    = true
bench      = true
doc        = true
plugin     = false
proc-macro = false
harness    = true

[dependencies]
digest        = { version = "^0.6", optional = true }
generic-array = { version = "^0.8", optional = true }

[dev-dependencies]
crypto-tests = "0.5"

[badges]
travis-ci   = { repository = "althonos/pruefung" }
codecov     = { repository = "althonos/pruefung" }
maintenance = { status = "actively-developed" }

[features]
# default features: use everything
default = ["generic", "adler32", "bsd", "crc", "fletcher16", "fnv", "unix", "sysv"]
# generic array digests
generic = ["generic-array", "digest"]
# Per-checksum feature
adler32 = []
bsd = []
crc = []
fletcher16 = []
fnv = []
unix = []
sysv = []
